# zaphiro-public

./: .dockerignore  Dockerfile  README.md  makefile  pyproject.toml  python_exercise.md
src/: main.py
src/api/: dependencies.py
src/api/routes/: __init__.py  components.py  measurements.py  reports.py
src/api/schemas/: component.py  measurement.py  report.py
src/auth/: __init__.py  config.py  routes.py  schemas.py  utils.py
src/core/: models.py  utils.py
src/core/services/: report.py
src/db/: __init__.py  config.py  models.py
tests/: conftest.py
tests/functional/report/: test_report_generation.py
tests/unit/auth/: test_routes.py
tests/unit/core/services/: test_report.py
